# momir-basic-printer

./: .gitignore  README.md  pyproject.toml
scripts/: test_display.py  test_hw.py
src/scryfall_thermal/: hardware.py  input.py  main.py  print.py  render.py  scryfall.py  symbols.py
src/scryfall_thermal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
